[package]
name = "automata_macros"
version = "0.1.0"
description = "Automata Macros"
edition = "2021"
# license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# [lints]
# workspace = true

# [package.metadata.docs.rs]
# rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
# all-features = true